venue display, textarea overflow fixed

--- a/Front-End/src/styles/app.scss
+++ b/Front-End/src/styles/app.scss
@@ -171,5 +171,8 @@ table {
   font-weight: 600;
 }
 .p-2 {
-  padding: 15px; 
+  padding: 15px;
+}
+textarea {
+  width: 100%;
 }
